@@ -1,5 +1,5 @@
 # File used by hudson to manage publication
-VERSION=1.3
+VERSION=2.0
 
 # STAGE options are "developer", "beta" or "stable"
 STAGE=developer
